# signature-detection

./: .gitignore  README.md  pyproject.toml
src/: evaluation-yolos-base.json  evaluation-yolos-small.json  evaluation-yolos-tiny.json  fine-tuning.ipynb
src/datasets/: test.json  train.json  val.json
src/utils/: config.py  dataset.py  evaluate.py  model.py  visualizer.py
